--- a/fitlog/fastgit/example/.fitconfig
+++ b/fitlog/fastgit/example/.fitconfig
@@ -1,5 +1,7 @@
-*.py
-ex.*
-useless-*.java
-data/code
-logs/results.txt
+[fit_settings]
+revert_with_commit_id = False
+watched_files = *.py, ex.*,useless-*.java, data/code, logs/results.txt
+
+[log_settings]
+default_log_dir = ./logs
+save_on_first_metric = True
