--- a/fitlog/fastgit/normal/.fitconfig
+++ b/fitlog/fastgit/normal/.fitconfig
@@ -1,1 +1,7 @@
-*.py
+[fit_settings]
+revert_with_commit_id = False
+watched_files = *.py,
+
+[log_settings]
+default_log_dir = ./logs
+save_on_first_metric = True
