--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include requirements.txt
 include LICENSE
 include README.md
+recursive-include fitlog/fastserver/static *
+recursive-include fitlog/fastserver/templates *.html
+include fitlog/fastserver/favicon.ico
 prune test/
 prune mode_test/
