1. 修改安装内容; 2.在初始化目录中增加log的config文件

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,5 +5,5 @@ recursive-include fitlog/fastserver/static *
 recursive-include fitlog/fastserver/templates *.html
 include fitlog/fastserver/favicon.ico
 prune test/
-include fitlog/fastgit/example/
-include fitlog/fastgit/normal/
+recursive-include fitlog/fastgit/example/ *
+graft fitlog/fastgit/normal
