修改测试文件夹名称为 tests

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,6 @@ include README.md
 recursive-include fitlog/fastserver/static *
 recursive-include fitlog/fastserver/templates *.html
 include fitlog/fastserver/favicon.ico
-prune test/
+prune tests/
 recursive-include fitlog/fastgit/example/ *
 graft fitlog/fastgit/normal
